<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_detail_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_backdrop_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/shimmer_bgcolor"
            android:contentDescription="@string/backdrop"
            android:scaleType="fitCenter"
            android:textColor="@color/shimmer_bgcolor"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_playtime_season_title_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/playtime_season_title_dummy"
            android:textColor="@color/shimmer_bgcolor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/item_title_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_backdrop_placeholder" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_title_placeholder" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="2:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent=".45">

            <ImageView
                android:id="@+id/img_poster_detail_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/shimmer_bgcolor"
                android:contentDescription="@string/poster"
                android:scaleType="fitCenter" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/year_of_release"
            android:textColor="@color/shimmer_bgcolor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/dummy_overview_title"
            android:textColor="@color/shimmer_bgcolor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dummy_genre_title"
            android:textColor="@color/shimmer_bgcolor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/tv_year_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/dummy_year"
            android:textColor="@color/shimmer_bgcolor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_genre_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/dummy_genre"
            android:textColor="@color/shimmer_bgcolor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/tv_playtime_season_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/dummy_playtime"
            android:textColor="@color/shimmer_bgcolor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_playtime_season_title_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/tv_playtime_season_title_placeholder" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="0.05dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_year_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/tv_year_placeholder" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="0.05dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tv_genre_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre_placeholder" />

        <TextView
            android:id="@+id/tv_overview_placeholder"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/shimmer_bgcolor"
            android:fontFamily="@font/poppins"
            android:textColor="@color/shimmer_bgcolor"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>